# VSOMEIP_motor_control

./: CMakeLists.txt  build.sh  vsomeip.json
client/: cluster.cpp
service/: motor.cpp
